--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,7 +6,6 @@
 .header-nav{
     padding: 0;
     margin: 0;
-    background-color: #000;
     display: flex;
 }
     .header-nav__item,
@@ -16,8 +15,10 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
+        background-color: #000;
         height: 100px;
         width: 185px;
+
     }
         .header-nav__item span{
             font-weight: 700;
@@ -33,4 +34,7 @@
         .header-nav__item.header-logo{
             background-color: #fff;
             width: 287px;
+        }
+        .active{
+            background-color: #DA1A32;
         }
