--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,17 +7,18 @@
     padding: 0;
     margin: 0;
     display: flex;
+    height: 100px;
+
 }
     .header-nav__item,
     .header-nav__item a{
+        flex-grow: 1;
         text-decoration: none;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
         background-color: #000;
-        height: 100px;
-        width: 185px;
 
     }
         .header-nav__item span{
