--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -7,4 +7,19 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
+    display: flex;
+    flex-wrap: wrap;
+}
+.catalog__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+}
+.catalog__item img{
+    width: 50px;
+}
+.catalog__item p{
+    font-size: 10px;
 }
