--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -9,17 +9,49 @@
     overflow: scroll;
     display: flex;
     flex-wrap: wrap;
+
+    padding: 10px 36px;
 }
 .catalog__item{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 321px;
+    height: 298px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #D8D8D8;
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
+}
+.catalog__item button{
+    width: 134px;
+    height: 32px;
+    border-radius: 5px;
+    background: #DA1A43;
+    color: white;
+    outline: none;
+    margin: 0;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
 }
 .catalog__item img{
     width: 100px;
 }
 .catalog__item p{
     font-size: 10px;
+}
+
+.modal-overlay{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+
 }
