--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -24,6 +24,11 @@
     border: 1px solid #D8D8D8;
     background: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.catalog__item:hover {
+    transform: scale(1.01);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .catalog__item button{
     width: 134px;
@@ -54,4 +59,8 @@
     top: 0;
     background-color: rgba(0, 0, 0, 0.7);
 
+}
+
+.slider__item img{
+    width: 50%;
 }
