--- a/src/components/sideBar/SideBar.css
+++ b/src/components/sideBar/SideBar.css
@@ -1,5 +1,5 @@
 .sidebar{
-    width: 228px;
+    width: 287px;
     height: calc(100vh - 100px);
     background-color: #F2F2F2;
 }
@@ -11,10 +11,69 @@
     border-bottom: 1px solid #E6E6E6;
 }
 .sidebar__menu-item{
+    width: 100%;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 109px;
     border-bottom: 1px solid #E6E6E6;
     list-style: none;
+    font-size: 30px;
 }
+.sidebar__menu-item--active{
+    background: #FFF;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+}
+.sidebar__menu-item--active::before{
+    content: "";
+    position: absolute;
+    top: -9px;
+    left: 47px;
+    width: 73px;
+    height: 9px;
+    background-color: black;
+    border-radius: 5px 5px 0px 0px;
+}
+.sidebar__menu-item--active .arrow {
+    position: absolute;
+    right: 10px;
+    width: 45px;
+    height: 1px;
+    background-color: #000;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    display: block;
+}
+
+.sidebar__menu-item--active .arrow::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 1px;
+    top: -2px;
+    right: -2px;
+    background-color: #000;
+    transform: rotate(45deg);
+}
+
+.sidebar__menu-item--active .arrow::before {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 1px;
+    top: 2px;
+    right: -2px;
+    background-color: #000;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    transform: rotate(-45deg);
+}
+
+.sidebar__menu-item--active .arrow::before .arrow:hover {
+    animation: arrow 1s linear infinite;
+}
+
+
 .sidebar__menu{
     padding: 0;
     margin: 0;
