--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,6 +12,7 @@
 }
     .header-nav__item,
     .header-nav__item a{
+        position: relative;
         flex-grow: 1;
         text-decoration: none;
         display: flex;
@@ -38,4 +39,19 @@
         }
         .active{
             background-color: #DA1A32;
+        }
+        .header__cart-counter{
+            top: 10px;
+            right: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            flex-shrink: 0;
+            border-radius: 20px;
+            background: #DA1A32;
+            font-size: 13px !important;
+            font-weight: normal;
         }
