--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -4,12 +4,12 @@
     height: calc(100vh - 100px);
 }
 .catalog{
-    height: 100%;
     overflow: scroll;
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: space-between;
     padding: 10px 36px;
+    width: calc(100vw - 287px);
 }
 .catalog__item{
     display: flex;
@@ -24,6 +24,9 @@
     background: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
     transition: transform 0.3s, box-shadow 0.3s;
+}
+.catalog__item--active{
+    border: 1px solid #21FF38;
 }
 .catalog__item:hover {
     transform: scale(1.01);
