--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -12,6 +12,7 @@
     width: calc(100vw - 287px);
 }
 .catalog__item{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,6 +25,18 @@
     background: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
     transition: transform 0.3s, box-shadow 0.3s;
+}
+.cart-counter{
+    position: absolute;
+    top: 19px;
+    right: 13px;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background: #21FF38;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .catalog__item--active{
     border: 1px solid #21FF38;
