--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -65,7 +65,12 @@
 .catalog__item p{
     font-size: 10px;
 }
-
+.modal{
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+}
 .modal-overlay{
     width: 100vw;
     height: 100vh;
