--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -13,7 +13,8 @@
     .header-nav__item,
     .header-nav__item a{
         position: relative;
-        flex-grow: 1;
+        /*flex-grow: 1;*/
+        width: 100%;
         text-decoration: none;
         display: flex;
         flex-direction: column;
@@ -36,13 +37,14 @@
         .header-nav__item.header-logo{
             background-color: #fff;
             width: 287px;
+            flex-shrink: 0;
         }
         .active{
             background-color: #DA1A32;
         }
         .header__cart-counter{
             top: 10px;
-            right: 40px;
+            right: 64px;
             display: flex;
             justify-content: center;
             align-items: center;
