--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,59 +1,55 @@
-.header{
-    background-color: #fff;
-    width: 100%;
+.header {
+    border-radius: 40px;
+    padding: 50px 0;
 }
 
-.header-nav{
+.header-nav {
     padding: 0;
     margin: 0;
     display: flex;
-    height: 100px;
+    justify-content: center;
+}
+
+.header-nav__item,
+.header-nav__item a {
+    position: relative;
+    margin: 0 20px;
+    /*flex-grow: 1;*/
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
 }
-    .header-nav__item,
-    .header-nav__item a{
-        position: relative;
-        /*flex-grow: 1;*/
-        width: 100%;
-        text-decoration: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: #000;
 
-    }
-        .header-nav__item span{
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 22px;
-            /* identical to box height */
+.header-nav__item span {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+    letter-spacing: 0.005em;
+    text-transform: uppercase;
+    color: black;
 
-            letter-spacing: 0.005em;
-            text-transform: uppercase;
+}
 
-            color: #FFFFFF;
-        }
-        .header-nav__item.header-logo{
-            background-color: #fff;
-            width: 287px;
-            flex-shrink: 0;
-        }
-        .active{
-            background-color: #DA1A32;
-        }
-        .header__cart-counter{
-            top: 10px;
-            right: 64px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            flex-shrink: 0;
-            border-radius: 20px;
-            background: #DA1A32;
-            font-size: 13px !important;
-            font-weight: normal;
-        }
+
+.active {
+    border-bottom: 1px solid black;
+}
+
+.header__cart-counter {
+    top: 0px;
+    right: -23px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    font-size: 13px !important;
+    font-weight: normal;
+}
