--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -1,15 +1,14 @@
 .catalog-wrapper{
     display: flex;
     width: 100vw;
-    height: calc(100vh - 100px);
 }
 .catalog{
-    overflow: scroll;
+    overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     padding: 10px 36px;
-    width: calc(100vw - 287px);
+    height: auto;
+    flex-grow: 1;
 }
 .catalog__item{
     position: relative;
@@ -19,6 +18,7 @@
     align-items: center;
     width: 321px;
     height: 298px;
+    margin: 10px 10px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 1px solid #D8D8D8;
