--- a/src/components/sideBar/SideBar.css
+++ b/src/components/sideBar/SideBar.css
@@ -1,24 +1,18 @@
 .sidebar{
-    width: 287px;
-    flex-shrink: 0;
-    background-color: #F2F2F2;
+    width: 23%;
+    height: 500px;
 }
 .sidebar__search{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 109px;
-    border-bottom: 1px solid #E6E6E6;
+    margin-bottom: 50px;
 }
-.search-bar{
-    width: 213px;
-    height: 36px;
-    flex-shrink: 0;
-    outline: 0;
-    border: 1px solid #CBCBCB;
-    border-radius: 10px;
-    padding-left: 50px;
-    box-sizing: border-box;
+
+.sidebar__menu{
+    display: flex;
+    flex-direction: column;
+    height: 50%;
 }
 .sidebar__menu-item{
     width: 100%;
@@ -26,26 +20,17 @@
     position: relative;
     display: flex;
     align-items: center;
-    height: 109px;
     border-bottom: 1px solid #E6E6E6;
     list-style: none;
     font-size: 30px;
     padding-left: 47px;
+    height: 100%;
 }
 .sidebar__menu-item--active{
     background: #FFF;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+    border-color: black;
 }
-.sidebar__menu-item--active::before{
-    content: "";
-    position: absolute;
-    top: -9px;
-    left: 47px;
-    width: 73px;
-    height: 9px;
-    background-color: black;
-    border-radius: 5px 5px 0px 0px;
-}
+
 .sidebar__menu-item--active .arrow {
     position: absolute;
     right: 10px;
