design improved and added search

--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -5,7 +5,7 @@
 .catalog {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 36px;
+    padding-left: 36px;
     height: auto;
     flex: 1;
     justify-content: space-between;
