--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -24,7 +24,7 @@ html{
 body{
     margin: 0;
     padding: 0;
-
+    overflow-y: scroll;
 }
 body * {
     font-family: "BigShouldersDisplay";
@@ -37,7 +37,7 @@ body * {
 }
 .app-container{
     width: 100%;
-    max-width: 1600px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
