--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,16 +1,20 @@
 .header {
+    z-index: 2;
     width: 100%;
     border-radius: 40px;
-    padding: 50px 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    height: 100px;
 }
-
+.header_logo{
+    max-width: 100%;
+    height: 80%;
+}
 .header-nav {
     padding: 0;
     margin: 0;
-    width: 40%;
+    width: 30%;
     display: flex;
     justify-content: space-between;
 }
