added dark theme

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -17,11 +17,30 @@
     font-weight: 700;
     font-style: normal;
 }
+
+:root{
+    --background: #ffffff;
+    --text-primary: black;
+    --text-secondary: grey;
+    --main-color: #DA1A43;
+    --secondary-color: green;
+    --main-border: #CBCBCB;
+}
+[data-theme='dark']{
+    --background: black;
+    --text-primary: #ffffff ;
+    --text-secondary: grey;
+    --main-color: #DA1A43;
+    --secondary-color: green;
+    --main-border: #CBCBCB;
+}
+
 html{
     font-size: 26px;
 }
 
 body{
+
     margin: 0;
     padding: 0;
     overflow-y: scroll;
@@ -30,15 +49,21 @@ body * {
     font-family: "BigShouldersDisplay";
     box-sizing: border-box;
 }
+a {
+    text-decoration: none;
+    color: inherit; /* Используем цвет, унаследованный от родителя */
+}
 .wrapper{
     display: flex;
     height: calc(100vh - 100px);
     width: 100vw;
 }
 .app-container{
+    background-color: var(--background);
+    color: var(--text-primary);
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
     box-sizing: border-box;
+    transition: all .5s;
 }
