--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -9,25 +9,9 @@
     height: max-content;
     flex: 1;
     justify-content: space-between;
-    background-color: var(--background);
 }
 
-.catalog__item {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
-    width: 45%;
-    height: 298px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    border: 1px solid #D8D8D8;
-    background: #FFF;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
+
 
 .cart-counter {
     position: absolute;
@@ -42,54 +26,27 @@
     align-items: center;
 }
 
-.catalog__item--active {
-    border: 1px solid #21FF38;
-}
-
-.catalog__item:hover {
-    transform: scale(1.01);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.catalog__item button {
-    width: 134px;
-    height: 32px;
-    border-radius: 5px;
-    background: #DA1A43;
-    color: white;
-    outline: none;
-    margin: 0;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    cursor: pointer;
-}
-
-.catalog__item img {
-    cursor: pointer;
-    width: 100px;
-}
-
-.catalog__item p {
-    font-size: 10px;
-}
 
 .modal {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
+    position: fixed;
+    top: 15%;
+    left: 15%;
+    width: 700px;
+    height: 600px;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: var(--background);
+
 }
 
 .modal-overlay {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     background-color: rgba(0, 0, 0, 0.7);
+    z-index: 4;
 
 }
 
@@ -110,8 +67,22 @@
     border-radius: 10px;
     padding-left: 50px;
     box-sizing: border-box;
+    color: var(--text-primary);
+    background-color: var(--background-secondary);
 }
 
-.slider__item img {
-    width: 50%;
+.catalog__item-button {
+    width: 134px;
+    height: 32px;
+    border-radius: 5px;
+    background: var(--main-color);
+    color: var(--text-primary);
+    outline: none;
+    margin: 0;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    cursor: pointer;
 }
