--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,59 +1,67 @@
-.header{
+.header {
+    position: sticky;
+    top: 0;
     background-color: #fff;
+    backdrop-filter: blur(10px);
+    background-color: hsla(0,0%,100%,.6);
+    z-index: 2;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+    background-color: var(--background);
 }
-
-.header-nav{
+.header_logo{
+    max-width: 100%;
+    height: 80%;
+}
+.header-nav {
     padding: 0;
     margin: 0;
+    width: 30%;
     display: flex;
-    height: 100px;
+    justify-content: space-between;
+}
+
+.header-nav__item,
+.header-nav__item a {
+    position: relative;
+    /*flex-grow: 1;*/
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
 }
-    .header-nav__item,
-    .header-nav__item a{
-        position: relative;
-        /*flex-grow: 1;*/
-        width: 100%;
-        text-decoration: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: #000;
 
-    }
-        .header-nav__item span{
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 22px;
-            /* identical to box height */
+.header-nav__item span {
+    line-height: 1.25;
+    font-size: 1rem;
+    font-weight: 400;
+    /* identical to box height */
+    letter-spacing: 0.005em;
+    text-transform: uppercase;
 
-            letter-spacing: 0.005em;
-            text-transform: uppercase;
+}
 
-            color: #FFFFFF;
-        }
-        .header-nav__item.header-logo{
-            background-color: #fff;
-            width: 287px;
-            flex-shrink: 0;
-        }
-        .active{
-            background-color: #DA1A32;
-        }
-        .header__cart-counter{
-            top: 10px;
-            right: 64px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            flex-shrink: 0;
-            border-radius: 20px;
-            background: #DA1A32;
-            font-size: 13px !important;
-            font-weight: normal;
-        }
+
+.active {
+    border-bottom: 1px solid var(--main-color);
+}
+
+.header__cart-counter {
+    top: -5px;
+    right: -15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    font-size: 13px !important;
+    font-weight: normal;
+}
